Fixed mobile white gap

--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -1,3 +1,5 @@
+
+html,
 body {
   font-family: $font-sans;
   font-feature-settings: 'liga', 'dlig';
@@ -5,6 +7,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   margin: 0;
+  overflow-y: auto;
   padding: 0;
 
   @include media($mobile) {
